tests/testdata/nonmem/errors/failed_run.ext
TABLE NO.     1: First Order Conditional Estimation with Interaction: Goal Function=MINIMUM VALUE OF OBJECTIVE FUNCTION: Problem=1 Subproblem=0 Superproblem1=0 Iteration1=0 Superproblem2=0 Iteration2=0
 ITERATION    THETA1       THETA2       THETA3       SIGMA(1,1)   OMEGA(1,1)   OMEGA(2,1)   OMEGA(2,2)   OMEGA(3,1)   OMEGA(3,2)   OMEGA(3,3)   OBJ
            0  1.00000E-02  1.00000E-01  1.00000E-02  9.00000E-02  1.00000E-01  1.00000E-02  1.00000E-01  0.00000E+00  0.00000E+00  1.00000E-01    19029.146679239562
  -1000000000  5.41987E+02  7.81686E+01  6.57632E-03  3.68382E-01  4.77929E+01  1.25378E+01  3.96778E+00  0.00000E+00  0.00000E+00  1.00707E-01   -901.72266710213239
  -1000000006  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  1.00000E+00  1.00000E+00  0.00000E+00    0.0000000000000000
  -1000000007  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00    0.0000000000000000
